--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "date-fns": "^4.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-quill-new": "^3.6.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
